[package]
name = "hunter_app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7" }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8.0"
mime_guess = "2.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
chrono = "0.4"
csv = "1.3"
rand = "0.8"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
scraper = "0.18"
urlencoding = "2.1"
regex = "1"
async-stream = "0.3"
